# toro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
docs/: MER.md  SRS.md  ddl_postgresql_v1.sql  dicionario-de-dados.md
models/: lead_scoring.joblib
scripts/: init_db.py  run_etl.py  run_nf.py  train_model.py
src/toro_insights/analytics/: kpis.py  loader.py  produtos.py
src/toro_insights/assistant/: agent.py  context.py  tools.py
src/toro_insights/config/: settings.py
src/toro_insights/domain/: constants.py  rules.py
src/toro_insights/etl/: extract.py  load.py  nf_extract.py  nf_pipeline.py  pipeline.py  template.py  transform.py
src/toro_insights/export/: brevo.py
src/toro_insights/infrastructure/db/: engine.py  repository.py
src/toro_insights/infrastructure/nf/: matcher.py
src/toro_insights/ml/: features.py  score.py  train.py
src/toro_insights/presentation/: auth.py  ui.py
src/toro_insights/schemas/: lead_raw.py  nf_item.py
src/toro_insights/utils/: logging.py
tests/: test_auth.py  test_brevo.py  test_kpis.py  test_ml.py  test_produtos.py  test_rules.py  test_template.py  test_transform.py
views/: assistente.py  campanhas.py  dashboard.py  exportar.py  funil.py  geografia.py  importar.py  produtos.py  scoring.py
