[project]
name = "toro-insights"
version = "0.2.0"
description = "Plataforma de inteligência de CRM para concessionária de veículos e caminhões"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=5.24",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "joblib>=1.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    "google-genai>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toro_insights"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
